@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-05-01T00:57:02Z",
-  "count" : 245,
+  "timestamp" : "2024-05-01T08:17:34Z",
+  "count" : 132,
   "count_minmax" : [ 111, 297 ],
-  "count_decinc" : [ -52, +297 ],
+  "count_decinc" : [ -165, +297 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 3 ],
   "uniques_decinc" : [ -1, +3 ]
