@@ -1,10 +1,10 @@
 {
-  "count": 4087,
+  "count": 4086,
   "uniques": 3,
   "clones": [
     {
       "timestamp": "2024-04-17T00:00:00Z",
-      "count": 245,
+      "count": 132,
       "uniques": 2
     },
     {
@@ -70,6 +70,11 @@
     {
       "timestamp": "2024-04-30T00:00:00Z",
       "count": 295,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-05-01T00:00:00Z",
+      "count": 112,
       "uniques": 1
     }
   ]
